operations finished, tests yet to be done
